--- a/views/products.hbs
+++ b/views/products.hbs
@@ -4,7 +4,7 @@
         <div class="container">
 
             <div class= "main-top">
-                <img style="-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="http://gundamchat.com/wp-content/uploads/2020/09/banner-m%C3%B4-h%C3%ACnh-one-piece-gundamchat-2.jpg" width="996" height="560">
+                <img src="../imgs/banner-mô-hình-one-piece-gundamchat-2.jpg" width="1300px" height="600px">
             </div>
             <div class="box-nav d-flex justify-between">
                 <a href="/product/create" class="border-shadow">
