--- a/views/user-register.hbs
+++ b/views/user-register.hbs
@@ -1,30 +1,45 @@
-    <H1> Register to use great service ! </H1>
 
-    <div class="container">
-                
-        <form  action="/user" method="POST">
-            <div class="mb-3">
-                <label for="UserName" class="form-label">Username</label>
-                <input type="text" class="form-control" id="UserName" name="UserName">
-            </div>
-            <div class="mb-3">
-                <label for="Password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="Password" name="Password">
-            </div>
-            <div class="mb-3">
-                <label for="FullName" class="form-label">Full Name</label>
-                <input type="text" class="form-control" id="FullName" name="FullName">
-            </div>
-            <div class="mb-3">
-                <label for="Email" class="form-label">Email</label>
-                <input type="text" class="form-control" id="Email" name="Email" >
-            </div>
-            <div class="mb-3">
-                <label for="PhoneNumber" class="form-label">Phone Number</label>
-                <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" >
-            </div>
+        <H1 class="btn-success">
+            [Admin] User Management ! 
+        </H1>
 
 
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>  
-    </div>
+        <div class="container">
+            <div>
+                <a class="btn btn-success" href="/user/create" role="button">Add new user</a>                  
+            </div>
+            <div class="row">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                            <th scope="col"><b>#</b></th>
+                            <th scope="col"><b>UserName</b></th>
+                            <th scope="col"><b>Password</b></th>
+                            <th scope="col"><b>Password</b></th>
+                            <th scope="col"><b>Email</b></th>
+                            <th scope="col"><b>PhoneNumber</b></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each user}}
+                            <tr>
+                            <th scope="row"> {{@key}}</th>
+                            <td>>{{this.UserName}}</td>
+                            <td>{{this.Password}}</td>
+                            <td>{{this.FullName}}</td>
+                            <td>{{this.Email}}</td>
+                            <td>{{this.PhoneNumber}}</td>
+                            <td>
+
+                                <a class="btn btn-primary" href="#" role="button">Update</a>
+
+                                <a class="btn btn-danger" href="#" role="button">Delete</a>
+
+
+                            </td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+            </div>
+        </div>
